--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     paths:
       - .github/workflows/test.yml
-      - localstack-sdk/**
+      - localstack-sdk-*
   push:
     branches:
       - main
