--- a/localstack-sdk-python/pyproject.toml
+++ b/localstack-sdk-python/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "localstack-sdk-python"
 readme = "README.md"
@@ -9,9 +5,14 @@ description = "Python SDK for LocalStack"
 authors = [
         { name = "LocalStack Team", email = "info@localstack.cloud"}
 ]
-version = "0.1"
+version = "0.0.1"
+
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
 dependencies = [
+    "localstack-sdk-generated"
 ]
 
 [project.optional-dependencies]
@@ -29,6 +30,9 @@ readme = { file = ["README.md"], content-type = "text/markdown"}
 where = ["."]
 include = ["*"]
 exclude = ["tests*"]
+
+[tool.uv]
+localstack-sdk-generated = { path = "../localstack-sdk-generated"}
 
 [tool.ruff]
 # Extend the ruff config in the root dir
