--- a/packages/localstack-sdk-generated/pyproject.toml
+++ b/packages/localstack-sdk-generated/pyproject.toml
@@ -22,7 +22,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-package-dir = { "" = "."}
+package-dir = { "" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
