--- a/packages/localstack-sdk-generated/pyproject.toml
+++ b/packages/localstack-sdk-generated/pyproject.toml
@@ -22,9 +22,9 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-package-dir = { "" = "src"}
+package-dir = { "" = "."}
 
 [tool.setuptools.packages.find]
-where = ["src"]
+where = ["."]
 include = ["*"]
 exclude = ["tests*"]
