--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     paths:
       - .github/workflows/test.yml
-      - localstack-sdk-*
+      - src/*
+      - test/*
+      - packages/*
   push:
     branches:
       - main
@@ -23,13 +25,12 @@ jobs:
       with:
         python-version: "3.11"
 
-    - name: Update pip
-      run: |
-        python -m pip install --upgrade pip
+    - name: Install uv
+      uses: astral-sh/setup-uv@v3
 
     - name: Install project
       run: |
-        make install-dev
+        uv sync
 
     - name: Install LocalStack
       run: |
