--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python SDK for LocalStack"
 authors = [
         { name = "LocalStack Team", email = "info@localstack.cloud"}
 ]
-version = "0.0.1"
+version = "0.0.2"
 dependencies = [
     "localstack-sdk-generated"
 ]
@@ -19,6 +19,9 @@ Issues = "https://github.com/localstack/localstack-sdk-python/issues"
 [build-system]
 requires = ["setuptools>=64"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.dynamic]
+readme = { file = ["README.md"], content-type = "text/markdown"}
 
 [tool.uv]
 dev-dependencies=[
