--- a/packages/localstack-sdk-generated/pyproject.toml
+++ b/packages/localstack-sdk-generated/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "localstack-sdk-generated"
-version = "0.0.4"
+version = "0.1.dev9"
 description = "LocalStack REST API - Generated Code"
 authors = [
         { name = "LocalStack Contributors", email = "info@localstack.cloud" }
