--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ where = ["localstack-sdk-python/"]
 include = ["localstack*"]
 exclude = ["tests*"]
 
+[project.entry-points.pytest11]
+localstack = "localstack.pytest.plugins"
+
 [tool.ruff]
 # Always generate Python 3.8-compatible code.
 target-version = "py38"
