added decorator to load a pod + a small fixture to reset the state

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ include = ["localstack*"]
 exclude = ["tests*"]
 
 [project.entry-points.pytest11]
-localstack = "localstack.pytest.plugins"
+localstack = "localstack.sdk.testing.pytest.plugins"
 
 [tool.ruff]
 # Always generate Python 3.8-compatible code.
