--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python SDK for LocalStack"
 authors = [
         { name = "LocalStack Team", email = "info@localstack.cloud"}
 ]
-version = "0.0.3"
+version = "0.0.2"
 dependencies = [
     "localstack-sdk-generated"
 ]
@@ -27,7 +27,8 @@ readme = { file = ["README.md"], content-type = "text/markdown"}
 dev-dependencies=[
     "pytest",
     "ruff",
-    "boto3"
+    "boto3",
+    "sphinx"
 ]
 
 [tool.uv.sources]
