--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,10 @@ readme = { file = ["README.md"], content-type = "text/markdown"}
 
 [tool.uv]
 dev-dependencies=[
-    "pytest",
-    "ruff",
-    "boto3"
+    "pytest>=8.3.3",
+    "ruff>=0.6.9",
+    "boto3>=1.35.40",
+    "sphinx>=8.1.3"
 ]
 
 [tool.uv.sources]
