--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ requires = ["setuptools>=64", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
+version_file = "localstack-sdk-python/localstack/sdk/version.py"
 local_scheme = "no-local-version"
 
 [tool.setuptools.dynamic]
