finalize the script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Release LocalStack Python Client
 
 on:
+  repository_dispatch:
+    types: [release-sdk]
   workflow_dispatch:
     inputs:
       version:
@@ -8,7 +10,6 @@ on:
         required: true
 
 env:
-  TAG_VERSION: "${{ inputs.version }}"
   git_user_name: localstack[bot]
   git_user_email: localstack-bot@users.noreply.github.com
 
@@ -16,106 +17,128 @@ jobs:
 
   test_python:
     runs-on: ubuntu-latest
+    env:
+      release: ${{ github.event_name == 'workflow_dispatch' && inputs.version || github.event.client_payload.version}}
 
     steps:
-    - name: Verify OpenAPI version
+    - name: "Set the URL of the spec"
       run: |
-        SPEC_URL=https://github.com/localstack/openapi/releases/download/${{ env.TAG_VERSION }}/localstack-spec.yml
+        echo "SPEC_URL=https://github.com/localstack/openapi/releases/download/v${{ env.release }}/localstack-spec.yml" >> $GITHUB_ENV
+
+    - name: "Verify OpenAPI version"
+      run: |
         # Check if the URL is valid
-        if ! wget --spider -q "$SPEC_URL"; then
-          echo "Invalid spec to build from: $SPEC_URL. Aborting ..."
+        if ! wget --spider -q "${SPEC_URL}"; then
+          echo "Invalid spec to build from: ${SPEC_URL}. Aborting ..."
           exit 1
         fi
-        
-        echo "VERSION=${TAG_VERSION#v}" >> $GITHUB_ENV
 
-    - name: Pull image
+    - name: "Pull image"
       run: |
-        docker pull localstack/localstack-pro:${VERSION}
+        docker pull localstack/localstack-pro:${{ env.release }}
 
-    - name: Checkout
+    - name: "Checkout"
       uses: actions/checkout@v4
       with:
         # setuptools_scm requires git history to determine the version
         fetch-depth: 0
 
-    - name: Set up Python 3.11
+    - name: "Set up Python 3.11"
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
 
-    - name: Install uv
+    - name: "Install uv"
       uses: astral-sh/setup-uv@v3
 
-    - name: Generate code from spec
+    - name: "Generate code from spec"
       run: |
         make clean-generated
-        ./bin/generate https://github.com/localstack/openapi/releases/download/${{ env.TAG_VERSION }}/localstack-spec.yml
+        ./bin/generate.sh ${SPEC_URL}
 
-    - name: Install project
+    - name: "Prepare git config"
+      run: |
+        git config user.name ${{ env.git_user_name }}
+        git config user.email ${{ env.git_user_email }}
+
+    - name: "Commit changed code"
+      run: |
+        if git status --porcelain packages/ | grep -q '^'; then
+          git add packages/
+          git commit -m "Generate code for ${{ env.release }}"
+
+          echo "Changes committed successfully"
+        else
+          echo "No changes detected after generating the code"
+        fi
+
+    - name: "Install project"
       run: |
         make install-dev
 
-    - name: Install LocalStack
+    - name: "Install LocalStack"
       run: |
-        pip install localstack==${{ env.TAG_VERSION }}
+        pip install localstack==${{ env.release }}
 
-    - name: Start Localstack
+    - name: "Start Localstack"
       env:
        LOCALSTACK_AUTH_TOKEN: ${{ secrets.LOCALSTACK_AUTH_TOKEN }}
       run: |
           source .venv/bin/activate
-          DEBUG=1 DISABLE_EVENTS="1" IMAGE_NAME="localstack/localstack-pro:${VERSION}" localstack start -d
+          DEBUG=1 DISABLE_EVENTS="1" IMAGE_NAME="localstack/localstack-pro:${{ env.release }}" localstack start -d
           localstack wait -t 120 || (python -m localstack.cli.main logs && false)
 
-    - name: Run Python Tests
+    - name: "Run Python Tests"
       env:
         LOCALSTACK_AUTH_TOKEN: ${{ secrets.LOCALSTACK_AUTH_TOKEN }}
       run: |
         make test
 
-    - name: Stop Localstack
+    - name: "Stop Localstack"
       if: always()
       run: |
           source .venv/bin/activate
           localstack logs
           localstack stop
 
-    - name: Install release helper
+    - name: "Install release helper"
       run: |
         curl -o bin/release-helper.sh -L https://api.github.com/repos/localstack/localstack/contents/bin/release-helper.sh -H 'Accept: application/vnd.github.v3.raw'
         chmod +x bin/release-helper.sh
 
-    - name: Create the release commit and tag
+    - name: "Create the release commit and tag"
       run: |
-        bin/release-helper.sh git-commit-release ${{ env.TAG_VERSION }}
+        bin/release-helper.sh git-commit-release ${{ env.release }}
 
-    - name: Publish release to pypi
+    - name: "Publish release to pypi"
       run: |
         make clean && make install
         make publish
       with:
         UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
 
-    - name: Push the release commit and tag
+    - name: "Push the release commit and tag"
       run: |
         git push --follow-tags
 
-    - name: Create GitHub release
+    - name: "Create GitHub release"
       env:
         GITHUB_TOKEN: ${{ secrets.LOCALSTACK_GITHUB_TOKEN }}
-      run: gh release create "${{ env.TAG_VERSION }}" --generate-notes --draft
+      run: gh release create "${{ env.release }}" --generate-notes --draft
 
-    - name: Commit and push next development version
+    - name: "Commit and push next development version"
       run: |
         bin/release-helper.sh git-commit-increment
         git push
 
-    - name: Publish development version to pypi
-      run: make install && make publish
+    - name: "Publish development version to pypi"
+      run: |
+        make install && make publish
+      with:
+        UV_PUBLISH_TOKEN: ${{ secrets.UV_PUBLISH_TOKEN }}
 
     - name: "Show git modifications"
       run: |
-        git log --oneline -n 3
+        git log --oneline -n 4
         git show HEAD~1
         git show HEAD
