--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,7 +113,7 @@ jobs:
     - name: "Create GitHub release"
       env:
         GITHUB_TOKEN: ${{ secrets.LOCALSTACK_GITHUB_TOKEN }}
-      run: gh release create "${{ env.release }}" --generate-notes --draft
+      run: gh release create "v${{ env.release }}" --generate-notes --draft
 
     - name: "Commit and push next development version"
       run: |
